--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
